kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: smarthotel
    service: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smarthotel
      service: postgres
  template:
    metadata:
      labels:
        app: smarthotel
        service: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: smarthotel
    service: postgres
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: smarthotel
    service: postgres
  type: ClusterIP
