kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: smarthotel
    service: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smarthotel
      service: redis
  template:
    metadata:
      labels:
        app: smarthotel
        service: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  labels:
    app: smarthotel
    service: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: smarthotel
    service: redis
  type: ClusterIP
